# Track

./: .gitignore  README.md  pyproject.toml
cfg/task/: .motion.yaml.swp  motion.yaml  motion_body.yaml
cfg/task/GR3/: motion.yaml
filesoutside/: humanoid.py
scripts/: load_npz.py  load_pkl.py
src/track/: command.py  observation.py  reward.py  termination.py
src/track_learning/: ppo.py
track/: __init__.py  asset.py  command.py  observation.py  reward.py  termination.py
track.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
track/assets/g1_description/: g1_29dof_nohand.urdf  g1_29dof_nohand.xml  g1_29dof_rev_1_0.urdf
track/task/motion/: motion.yaml
